Proofread Intro, Background and Chapter 5

--- a/head/acknowledgements.tex
+++ b/head/acknowledgements.tex
@@ -10,7 +10,7 @@ First and foremost, I would like to thank my PhD supervisors, without whom I wou
 
 Being simultaneously part of two laboratories can sometimes be challenging, but the amazing people I had the chance to work with made the journey much more enjoyable. I thank my colleagues at ChilDLab for teaching me so much about the clinical aspects of our project. In particular, thank you Chiara and Vanessa for your collaboration, friendship and endless support --- no wonder we call ourselves the \textit{dream team}. All MIP:labbers, thank you for making me feel immediately welcome upon my arrival, for all the interesting scientific discussions during meetings or around tiramisu and coffee (tea for me, please!), and for the countless hours of Mafia games. Especially, I would like to thank Dani for being a good friend and role model, Thomas for supporting me and teaching me to never give up (on my work and on French), Giuli and Younes for some of the happiest memories and proudest records of my PhD, and Laura for helping me feel good even in the occasional moments when little else would do.  Finally, I would like to thank Mme Hausler and Manuela, for dealing with all the administrative issues so that we could concentrate on our work.
 
-The analyses presented in this work would not have been possible without data – the acquisition of which was a long process involving several colleagues. Thank you Chiara and Vanessa (again!), Jiske, Fanny and Greta, for recruiting our subjects and/or helping to collect data. I extend my gratitude to Loan and Roberto, who so kindly helped us in the MRI facility and patiently forgave subject no-shows and the occasional hiccup in organisation. I am also extremely grateful to the children and their parents who participated in our study and so generously contributed their time to advance knowledge on the important topic of premature birth.
+The analyses presented in this work would not have been possible without data – the acquisition of which was a long process involving several colleagues. Thank you Chiara and Vanessa (again!), Jiske, Fanny and Greta, for recruiting our subjects and/or sharing the arduous task of data collection with me. I extend my gratitude to Loan and Roberto, who so kindly helped us in the MRI facility and patiently forgave subject no-shows and the occasional hiccup in organisation. I am also extremely grateful to the children and their parents who participated in our study and so generously contributed their time to advance knowledge on the important topic of premature birth.
 
 While I feel terribly lucky to have had such a well-rounded team and infra-structure to perform my work, I would not have got to this point without the love and support from my family and friends. I must absolutely thank my husband Ben for being such a super-star partner and supporting me in any goal I set myself to achieve --- including organising our two international weddings while also pursuing my PhD. Thank you for being my best friend, my boyfriend, my family, my home and now, my co-author. I thank my mum Iva, who would have been absolutely thrilled to see me get here, for the strong foundation she gave me in the time we had together and for teaching me early on that education will take one very far --- I just don't know if she had Switzerland in mind. Dad, Cristina, Marcinha, aunt Ceres, Diego, Juliana and Heitor: thank you for the unconditional support, for being such a strong foundation in my life, and for just being there whenever I needed, and whenever I didn't need it, too. Thank you for understanding that I could not visit as often as I would have loved to, especially in the final stages of the PhD. Last but not least, I would like to thank all my friends for making the world a beautiful place and my life that much happier and effortless, which allowed me to concentrate all my mental resources on this work. Especially Bee, Nanna, Sassá, Cuka, Cecella, Tristan and Sylvain: thank you for defying physics and seemingly making the thousands of miles that separate us disappear. I feel your presence around me every single day.
 
