--- a/main/ch1_introduction.tex
+++ b/main/ch1_introduction.tex
@@ -23,11 +23,11 @@ Recently, fMRI studies have shown that the brain activity is highly dynamic, flu
  
 
 
-\section{Organization and main contributions}
+\section{Organisation and main contributions}
 
 % Summary of all chapters
 
-The goal of this thesis has been to advance the knowledge on the neural effects of preterm birth in the resting state as well as during performance of cognitive tasks. This manuscript is thus organised as a compilation of two published articles and three preprints in preparation for submission. 
+The goal of this thesis is to advance the knowledge on the neural effects of preterm birth, in the resting state as well as during performance of cognitive tasks, through the development of state-of-the-art imaging analyses. This manuscript is thus organised as a compilation of two published articles and three preprints in preparation for submission. 
 Chapter \ref{chapter:ch2} provides an overview of the state of the art in functional MRI analysis and preterm birth research, and serves as a background for the studies presented in subsequent chapters. 
 It starts by introducing fMRI as a powerful tool to investigate human brain function, followed by a description of currently available methodologies for human brain mapping using this technique. 
 It then characterises the clinical aspects of preterm birth and presents the current knowledge on how its outcomes relate to brain function.
@@ -36,8 +36,8 @@ Chapter \ref{chapter:ch6} then summarises and integrates the results, and propos
 
 % Disclaimer – use of pronoun "we" intead of "I"
 Below, I summarise the main research questions and contributions of each article. 
-In all of them I contributed to the planning, performed all data processing and analysis as well as methods development and statistical analysis where applicable, wrote --- or contributed equally to the writing of --- the manuscript and revisions. 
-Since all of these studies were achieved thanks to a collaboration involving large groups of people, I will use the personal pronoun "we" from now on when discussing the work done. 
+In all of them I contributed to the planning, performed all data processing; methods' development; and statistical analysis where applicable, and wrote --- or contributed equally to --- the manuscript and revisions. 
+Since these studies were achieved thanks to a collaboration involving large groups of people, I will often use the personal pronoun "we" when discussing the work done. 
 
 
 
@@ -63,7 +63,7 @@ In this article, I investigate the link between dynamic brain function and gesta
 % Description of Chapter 4 - ORFi?
 \subsection*{Chapter \ref{chapter:ch4}: Studying cognition with task-based fMRI: Reality Filtering in young populations}
 
-While resting-state analyses provide profound insight into brain function, task-based fMRI paradigms are crucial to understand how the brain works under specific cognitive demands. In the case of preterm populations, there is especial interest in cognitive functions involving frontal brain areas, as neuroimaging studies have highlighted widespread alterations in prefrontal cortex's structure and function in preterm individuals across lifetime. In this chapter, we thus employ a Reality Filtering (RF) task, known to recruit the orbitofrontal cortex (OFC) in adults, to study brain function in this area in young adolescents. To the best of our knowledge, no one has looked into brain function related to RF in children so far. Therefore, this chapter is divided in two steps: First, we confirm the OFC's involvement in RF in typically developing, fullterm-born children. Then, we look into whole-brain, as well as OFC-seed differences, between a preterm-born and a control group while performing an RF task.
+While resting-state analyses provide profound insight into brain function, task-based fMRI paradigms are crucial to understand how the brain works under specific cognitive demands. In the case of preterm populations, there is particular interest in cognitive functions involving frontal brain areas, as neuroimaging studies have highlighted widespread alterations in the prefrontal cortex's structure and function in preterm individuals across lifetime. In this chapter, we thus employ a Reality Filtering (RF) task, known to recruit the orbitofrontal cortex (OFC) in adults, to study brain function in this area in young adolescents. To the best of our knowledge, no one has looked into brain function related to RF in children so far. Therefore, this chapter is divided in two steps: First, we confirm the OFC's involvement in RF in typically developing, fullterm-born children. Then, we look into whole-brain, as well as OFC-seed differences, between a preterm-born and a control group while performing an RF task.
 
 \subsection*{Section \ref{section:ch4_orfi_ctrl}: \textit{(Journal Article)} "Get real: orbitofrontal cortex mediates the ability to sense reality in early adolescents"}
 \textit{What are the neural processes underlying reality filtering in early adolescents?}
@@ -89,7 +89,9 @@ While typical task-based studies compare and contrast how brain activity changes
 
 Previous studies have shown that relevant information on brain function is condensed in specific moments of high amplitude peaks in the BOLD signal \citep{Tagliazucchi2011a}, meaning that large parts of the fMRI time series contain information that does not necessarily add information for certain analyses. This means the fMRI data can reduce to a point-process \citep{Tagliazucchi2012} characterised by a sequence of time points when a seed signal traverses a given threshold. If these points are then averaged, one obtains patterns of co-activation with a seed that are recurring throughout the experiment, at a single-frame resolution \citep{Liu2013}.
 
-In this article I develop a seed-based method called Psychophysiological Interactions of Co-Activation Patterns (PPI-CAPs) to investigate such dynamic modulations of functional brain connectivity in a task-based context. In a naturalistic setting where participants watched a TV program, several patterns of co-activation were yielded using a posterior cingulate cortex seed --- chosen due to its well documented connectivity arrangements \citep{Liu2013a, Karahanoglu2015a,Lin2017} and description as a hub region \citep{Andrews-hanna2010} ---, whose occurrence rates and polarity varied depending on the context; on the seed activity; or on an interaction between the two. Moreover, this method exposed the consistency in effective connectivity patterns across subjects and time, allowing us to uncover links between PPI-CAPs and specific stimuli contained in the video. The main contribution of this study was revealing that explicitly tracking connectivity pattern transients is paramount to advance our understanding of how different brain areas dynamically communicate when presented with a set of cues. Given its ability to concentrate the analysis on very limited amounts of data, this represents a promising avenue for further study of dynamic features of task-modulated brain function in clinical or young populations, such as the preterm-born young adolescents most of this thesis concentrates on. 
+In this article I develop a seed-based method called Psychophysiological Interactions of Co-Activation Patterns (PPI-CAPs) to investigate such dynamic modulations of functional brain connectivity in a task-based context. In a naturalistic setting in which participants watched a short TV program, several patterns of co-activation were yielded using a posterior cingulate cortex seed --- chosen due to its well documented connectivity arrangements \citep{Liu2013, Karahanoglu2015a,Lin2017} and its description as a hub region \citep{Andrews-hanna2010}. These patterns' occurrence rates and polarity varied according the context; the seed activity; or an interaction between the two. Moreover, this method unveiled the consistency in effective connectivity patterns over time and across subjects, which allowed us to uncover links between PPI-CAPs and specific stimuli contained in the video. The main contribution of this study was revealing that explicitly tracking connectivity pattern transients is paramount to advance our understanding of how different brain areas dynamically communicate when presented with a set of cues. Given its ability to concentrate the analysis on very limited amounts of data, this represents a promising avenue for further study of dynamic features of task-modulated brain function in clinical or young populations, such as the preterm-born young adolescents most of this thesis concentrates on. 
+
+The code developed to perform the analysis described in this work has been made available on \url{https://github.com/lorenafreitas/PPI_CAPs}
 
 
 \subsection*{Section \ref{section:ppicaps_preterm}: \textit{(Journal Article)} "Tracking moment-to-moment functional connectivity in preterm-born young adolescents during movie watching and emotion regulation"}
