--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -43,7 +43,7 @@ When an electromagnectic radio frequency (RF) pulse transmitted by the RF coil p
 Then, when the RF pulse is stopped, the system slowly returns to equilibrium: the transversal magnetisation begins to disappear (a phenomenon called transversal relaxation, described by time constant T\textsubscript{2}), introduction of tissue in B0 will lead to small variations in magnetic field as a function of local magnetic susceptibility, while the longitudinal magnetisation returns to its original size (\textit{i.e.}, longitudinal relaxation, described by time constant T\textsubscript{1}) --- see Figure (\ref{fig:ch2_spins}D/E). 
 This process creates a signal that can be measured by a receiver coil contained in the MR machine. 
 A third property,  T\textsubscript{2}\textsuperscript{*}, describes the combined effect of local inhomogeneities (for example caused by field distortions near blood vessels which contain deoxyhemoglobin) and T\textsubscript{2} in the magnetic field. 
-The MRI scanner can be programmed to emphasise the effects those inhomogeneities, and this forms the foundation of blood oxygenation level dependent (BOLD) functional MRI, as discussed in the next section.
+The MRI scanner can be programmed to emphasise the effects of those inhomogeneities, and this forms the foundation of blood oxygenation level dependent (BOLD) functional MRI, as discussed in the next section.
 
 By altering how often an RF pulse is applied and the echo time (TE;  that is, the time between the onset of the RF excitation pulse and the highest signal induced in the coil), we can select the characteristic that we want to emphasise in the tissues (Figure \ref{fig:ch2_spins}F). 
 The measured signal is then given by $M_0 (1-e ^{-TR/T_1} )e^{-TE/T_2^{(*)}}$,
@@ -139,7 +139,7 @@ An alternative to these confirmatory analyses is to employ exploratory methods, 
 
 \subsection{Resting-state fMRI in the study of brain function} \label{subsec:ch2_restingState}
 
-In the mid 90's, \citep{Biswal1995} showed in an original study that even at rest, activity in the moter cortex is remarkably structured and bilaterally coherent, despite the absence of an explicit motor task. Since then, resting-state functional magnetic resonance imaging (rs-fMRI) has become a widely used tool to investigate temporal fluctuations in neuronal activity by looking into  BOLD signals across the brain \citep{Damoiseaux2006, Fox2007}. Thanks to the absence of goal-directed stimulation or activity, this paradigm is particularly well suited for studying and comparing brain function between populations who might respond to task instructions with different levels of cognitive ability or attention such as clinical; ageing; or very young cohorts, because it has minimal compliance requirements. Additionally, provided that the same image acquisition parameters are used, this allows data recorded across multiple research centers to be pooled or compared, given that there is no variability task demands. These results are comparable even when the conditions slightly differ across studies (e.g., eyes closed; open; with or without fixation; etc.), so those can be appropriately chosen according to the comfort of the targeted population \citep{Soares2016}. Furthermore, this data can be acquired in a relatively short time, with sessions of 5\textendash7 min yielding a reasonable trade-off between acquisition time and the robustness of results in adults \citep{VanDijk2010, Whitlow2011}. In young children, 5.5 min has been shown to be an acceptable duration, to avoid head motion due to their becoming too restless \citep{White2014a}. 
+In the mid 90's, \citep{Biswal1995} showed in an original study that even at rest, activity in the motor cortex is remarkably structured and bilaterally coherent, despite the absence of an explicit motor task. Since then, resting-state functional magnetic resonance imaging (rs-fMRI) has become a widely used tool to investigate temporal fluctuations in neuronal activity by looking into  BOLD signals across the brain \citep{Damoiseaux2006, Fox2007}. Thanks to the absence of goal-directed stimulation or activity, this paradigm is particularly well suited for studying and comparing brain function between populations who might respond to task instructions with different levels of cognitive ability or attention such as clinical; ageing; or very young cohorts, because it has minimal compliance requirements. Additionally, provided that the same image acquisition parameters are used, this allows data recorded across multiple research centers to be pooled or compared, given that there is no variability task demands. These results are comparable even when the conditions slightly differ across studies (e.g., eyes closed; open; with or without fixation; etc.), so those can be appropriately chosen according to the comfort of the targeted population \citep{Soares2016}. Furthermore, this data can be acquired in a relatively short time, with sessions of 5\textendash7 min yielding a reasonable trade-off between acquisition time and the robustness of results in adults \citep{VanDijk2010, Whitlow2011}. In young children, 5.5 min has been shown to be an acceptable duration, to avoid head motion due to their becoming too restless \citep{White2014a}. 
 
 In the preterm population, rs-fMRI has often been used in the context of functional connectivity (FC) analyses (see Section \ref{sub:static_rsfmri}), measuring temporal correlations between the activity of different brain regions or networks \citep{Lordier2019}. Thanks to these studies, it is now known that alterations in FC may begin even before birth \citep{Thomason2017} and often last through adolescence \citep{Wehrle2018} into adult life \citep{Papini2016}. 
 
@@ -162,7 +162,7 @@ These initial approaches led to the discovery that some of these relationships a
 
 
 
-In an alternative method for brain network analysis, rs-fMRI can be seen in terms of graphs, where brain regions represent nodes and high correlation values represent edges \citep{Rubinov2010, Farahani2019}. The application of graph theory concepts in FC analysis reveals complex aspects of connectivity using graph parameters (e.g., nodal degrees, average path length, clustering coefficient, etc.) which complement traditional analysis methods. These metrics may then be used to shed light on the brain's ability to rapidly combine information from distribute regions, its resilience to external perturbations, among others.
+In an alternative method for brain network analysis, rs-fMRI can be seen in terms of graphs, where brain regions represent nodes and high correlation values represent edges \citep{Rubinov2010, Farahani2019}. The application of graph theory concepts in FC analysis reveals complex aspects of connectivity using graph parameters (e.g., nodal degrees, average path length, clustering coefficient, etc.) which complement traditional analysis methods. These metrics may then be used to shed light on the brain's ability to rapidly combine information from distributed regions, its resilience to external perturbations, among others.
 
 \subsection{A dynamic approach to fMRI analysis}
 
@@ -171,11 +171,11 @@ In an alternative method for brain network analysis, rs-fMRI can be seen in term
 
 Although static methods are still the most widely-adopted approach for resting-state fMRI analysis, over the past decade a growing body of research has shown that FC is actually dynamic over time \citep{Chang2010}. Importantly, these time-varying properties of brain activity contain invaluable information to understand brain function \citep{Hutchison2013, Christoff2016}.
 
-An initial parameter of brain dynamics is BOLD signal variability, usually calculated as the standard deviation of the BOLD time series at each voxel \citep{McIntosh2010}. Often overlooked as noise in traditional analyses, over the past decade it has been increasingly thought of as a potentially vital feature of brain function \cite{Garrett2010}, with higher variability seeming relevant to guarantee systems' stability and dynamic range \citep{Deco2011} as well as development and cognition in healthy \citep{Garrett2013} and clinical \citep{Zoller2017, Nomi2018, Easson2019} populations.
+An initial parameter of brain dynamics is BOLD signal variability, usually calculated as the standard deviation of the BOLD time series at each voxel \citep{McIntosh2010}. Often overlooked as noise in traditional analyses, over the past decade it has been increasingly thought of as a potentially vital feature of brain function \citep{Garrett2010}, with higher variability seeming relevant to guarantee systems' stability and dynamic range \citep{Deco2011} as well as development and cognition in healthy \citep{Garrett2013} and clinical \citep{Zoller2017, Nomi2018, Easson2019} populations.
 
 Besides the dynamics of brain activity, changes in the \textit{relationships} between different brain regions over time have also been increasingly found to be relevant, spawning the field now known as dynamic functional connectivity \citep{Hutchison2013, Preti2017}. The most popular approach quickly became using a sliding window, where the FC is typically computed over subsequent, temporally shifted windows to capture connectivity fluctuations \citep{Chang2010, Sakoglu2010, Kucyi2014}. This yields a series of FC matrices which contain the time courses of the fluctuation of pairwise correlations, and further analysis can then follow to detect dynamic brain states using a variety of additional methods such as principal component analysis \citep{Leonardi2013}, hidden Markov models \citep{Vidaurre2017}, etc. Despite its prominence, this framework remains limited by its dependence on window parameters, its inherently lowered temporal resolution \cite{Leonardi2015}, and its sensitivity to outliers since all time points within a window are given equal importance \cite{Lindquist2014}.
 
-An alternative approach to sliding windows focuses on performing a point process analysis (PPA) by looking into subsets of single fMRI frames instead of focusing on entire time courses. This is possible because, when averaged, frames where a selected seed region is highly active reveal a pattern containing all regions that co-activate with that ROI \citep{Tagliazucchi2012}. This can be seen as a computationally efficient proxy of a seed-based static FC descriped in section \ref{sub:static_rsfmri}. As described above, however, FC patterns are known to be variable over time, and so a natural development of the PPA approach is to temporally cluster these selected frames into co-activation patterns (CAPs; \citeauthor{Liu2018}, \citeyear{Liu2018}). Each CAP is then a dynamic building block of the overall connectivity map, each varying in duration, number of appearances, etc. Going a step further, innovation-driven CAPs (iCAPs) cluster frames based not on similarity between patterns of \textit{activation}, but between patterns of activation  \textit{changes} \citep{Karahanoglu2015a}. The interest here lies in finding groups of regions whose activation change (activate or deactivate) simultaneously, allowing for temporal and spatial overlaps.     
+An alternative approach to sliding windows focuses on performing a point process analysis (PPA) by looking into subsets of single fMRI frames instead of focusing on entire time courses. This is possible because, when averaged, frames where a selected seed region is highly active reveal a pattern containing all regions that co-activate with that ROI \citep{Tagliazucchi2012}. This can be seen as a computationally efficient proxy of a seed-based static FC described in section \ref{sub:static_rsfmri}. As described above, however, FC patterns are known to be variable over time, and so a natural development of the PPA approach is to temporally cluster these selected frames into co-activation patterns (CAPs; \citeauthor{Liu2018}, \citeyear{Liu2018}). Each CAP is then a dynamic building block of the overall connectivity map, each varying in duration, number of appearances, etc. Going a step further, innovation-driven CAPs (iCAPs) cluster frames based not on similarity between patterns of \textit{activation}, but between patterns of activation  \textit{changes} \citep{Karahanoglu2015a}. The interest here lies in finding groups of regions whose activation change (activate or deactivate) simultaneously, allowing for temporal and spatial overlaps.     
 
 \subsubsection{Dynamic analysis of task-Based fMRI}
 
@@ -197,7 +197,7 @@ Especially in the more extreme cases, complications related to an early birth ar
 Although PT birth may be caused by various reasons and several well known biological pathways leading to it exist \citep{Behrman2007}, the majority of the cases are "idiopathic", meaning that it happens spontaneously and without an obvious cause.
 Importantly, the number of PT births has been on the rise over the past 20 years \citep{Costeloe2012}, possibly as a consequence of  an increase in maternal age and changes in obstetric practices. 
 Additionally, with the continuous improvements in medical treatment, the rates of survival have also increased across the world, meaning that more and more children will live with the effects of prematurity each year. 
-Besides the consequences to the children's health and behaviour, this increase is expected to escalate the economical impact of PT birth not only in the short term (\textit{i.e.,} immediate medical care), but also in the longer term. 
+Besides the consequences to the children's health and behaviour, this increase is expected to escalate the economic impact of PT birth not only in the short term (\textit{i.e.,} immediate medical care), but also in the longer term. 
 In fact, according to the Institute of Medicine of the National Academy of Sciences, special education services related with a higher prevalence of disabling conditions in PT-born children cost U\$1.1 billion yearly in the United States alone, while the lost household and labour market productivity had an impact of approximately U\$5.7 billion \citep{Behrman2007}. % https://www.ncbi.nlm.nih.gov/books/NBK11358/
 
 
@@ -209,7 +209,7 @@ In fact, according to the Institute of Medicine of the National Academy of Scien
 Preterm birth puts children at a considerably higher risk of developing a broad range of cognitive deficits \citep{Brydges2018, Twilhaar2018}. % \Vandewouw et al, Human Brain Mapping, 2019
 By school age, up to 50\% of these children develop cognitive, language, or socio-emotional disabilities that are likely linked to neurological abnormalities starting before birth, lasting through life and into adulthood \citep{Gozzo2009, Chaminade2013, Moiseev2014, Hornman2016, Thomason2017, Burnett2018}.
 
-A meta-analysis of cognitive outcomes in more than 7000 children and teenagers born very preterm and aged 5--20 years old found that this population showed significant deficits in intelligence \cite{Twilhaar2018}. A similar study by \citet{Brydges2018}, involving more than 6000 individuals, showed that they scored significantly lower on intelligence tests; measures of executive functioning; and processing speed, as compared to their term born peers across a wide range of ages (4--17). This study found no association between the children's age at assessment and cognitive impairment, indicating that very preterm born children fail to catch up with term born ones throughout childhood and adolescent. In that sense, it seems that the differences between the two groups are due to a deficit in PT children, rather than a delay \citep{Brydges2018}. This is in line with \citep{Linsell2018}'s study, which found that cognitive function did not recover or deteriorate between infancy and adulthood in extremely preterm individuals, and explain why \citep{Doyle2010} find long-lasting effects of extremely preterm birth in an adult cohort. Importantly, socio-economic status at birth has been shown to affect IQ scores in adults born very preterm \citep{Breeman2017}, and to modify the relationship between early-life events and neurodevelopmental outcomes in preterm born children. Further understanding these complex relationships may shed light into potential avenues for promoting improved outcomes for infants at higher risk of neurodevelopmental issues \citep{Benavente-Fernandez2020}. 
+A meta-analysis of cognitive outcomes in more than 7000 children and teenagers born very preterm and aged 5--20 years old found that this population showed significant deficits in intelligence \cite{Twilhaar2018}. A similar study by \citet{Brydges2018}, involving more than 6000 individuals, showed that they scored significantly lower on intelligence tests; measures of executive functioning; and processing speed, as compared to their term born peers across a wide range of ages (4--17). This study found no association between the children's age at assessment and cognitive impairment, indicating that very preterm born children fail to catch up with term born ones throughout childhood and adolescence. In that sense, it seems that the differences between the two groups are due to a deficit in PT children, rather than a delay \citep{Brydges2018}. This is in line with \citep{Linsell2018}'s study, which found that cognitive function did not recover or deteriorate between infancy and adulthood in extremely preterm individuals, and explain why \cite{Doyle2010} find long-lasting effects of extremely preterm birth in an adult cohort. Importantly, socio-economic status at birth has been shown to affect IQ scores in adults born very preterm \citep{Breeman2017}, and to modify the relationship between early-life events and neurodevelopmental outcomes in preterm born children. Further understanding these complex relationships may shed light into potential avenues for promoting improved outcomes for infants at higher risk of neurodevelopmental issues \citep{Benavente-Fernandez2020}. 
 
 Besides difficulties in executive functions, children who were born prematurely are also at a higher risk for socio-emotional disabilities \citep{Zmyj2017}, with impaired interactions being present in relationships with family, teachers and friends \citep{Twilhaar2019}. In particular, PTB children are less likely to initiate and respond to peers' efforts to participate in joint attention \citep{Zmyj2017}, which may aggravate later social cognition impairments and thus hinder social interaction skills. Whether these differences in social competences are a product of faulty or delayed maturation remains a topic for debate: some studies point towards the former hypothesis, since these effects have also been found in individuals through adolescence  \citep{Healy2013, Saigal2016}; while others put it down to a maturational lag, with findings that PTB children catch up with their full term peers by the age of 5 \citep{Witt2018}. These inconsistencies emphasise the complexity of the effects of preterm birth and the importance of further characterising the link between brain and behaviour.
 
@@ -227,7 +227,7 @@ To identify potential interventions that would be able to recover some of the be
 
 The most common pathology affecting babies born very preterm is the encephalopathy of prematurity, which is characterised by a subtle brain injury followed by disrupted brain growth and the development of internal (such as basal ganglia and thalamus) and external (cerebral cortex) structures \citep{Kunz2014}. In addition, prematurity has been associated with reduced white matter volume and myelination, decreased cortical grey matter as well as lower hippocampal, basal ganglia and cerebellar volume that lasts through childhood and adolescence. Moreover, these alterations have been linked to poorer neurodevelopmental \citep{Inder2005,Ment2009,Nosarti2013,Padilla2015} and educational \citep{Cheong2013} performance across childhood.
 
- Recently, studies have investigated regional volume changes and how the relate to specific neuropsychological consequences of preterm birth. Reduced dorsal prefrontal cortex (dPFC) volume was found to be linked to children's attention and hyperactivity problems \citep{Bora2014}. In adolescents, volume changes in the fusiform and orbitofrontal cortices have been associated with socialisation problems \citep{Healy2013}, and autism \citep{Johnson2014}. A reduction in hippocampal volume has also been shown to correlate with memory deficits in preterm children. Taken together, these studies emphasise the vulnerability of the brain after preterm birth.
+ Recently, studies have investigated regional volume changes and how they relate to specific neuropsychological consequences of preterm birth. Reduced dorsal prefrontal cortex (dPFC) volume was found to be linked to children's attention and hyperactivity problems \citep{Bora2014}. In adolescents, volume changes in the fusiform and orbitofrontal cortices have been associated with socialisation problems \citep{Healy2013}, and autism \citep{Johnson2014}. A reduction in hippocampal volume has also been shown to correlate with memory deficits in preterm children. Taken together, these studies emphasise the vulnerability of the brain after preterm birth.
 
 Most neuroimaging studies involving preterm young adolescents rely on structural features, relating brain volumes or microstructure to clinical and cognitive outcomes \citep{Huning2018, Groeschel2019, Boardman2020}. While these structural studies provide relevant insights into brain injuries that are associated with prematurity and potentially underlie neurocognitive dysfunction, they cannot provide information on brain activation driven by specific demands. Studies that investigate brain function are thus necessary to provide complementary information on the consequences of preterm birth, as discussed in the next section.
 
@@ -257,7 +257,7 @@ Given the high incidence of cognitive abnormalities in preterm born children at 
 
 \subsection{Interventions for preterm newborns and children}
 
-Early interventions are usually implemented shortly after birth, often relying on improving the care-giving environment and with the goal of subsequently improving clinical outcomes. They typically involve the family, including following integrative programs such as the Newborn Individualized Developmental Care and Assessment Program (NIDCAP; \citeauthor{Peters2009}, \citeyear{Peters2009}); the Infant Behavioral Assessment and Intervention Program (IBAIP; \citeauthor{VanHus2016}, \citeyear{VanHus2016}); the Victorian Infant Brain Studies (VIBeS PLus; \citeauthor{Spittle2018}, \citeyear{Spittle2018}); or using Kangaroo Mother Care position and method \citep{Peters2009}. A meta-analysis of these family-centred interventions has shown that they have a positive effect on cognition in children born very preterm, accompanied by a lower effect motor abilities, and inconclusive results on language \citep{Ferreira2020}. Importantly, although these interventions have been beneficial, the exact environmental factors responsible for enhancing brain development remain largely unknown. 
+Early interventions are usually implemented shortly after birth, often relying on improving the care-giving environment and with the goal of subsequently improving clinical outcomes. They typically involve the family, including following integrative programs such as the Newborn Individualized Developmental Care and Assessment Program (NIDCAP; \citeauthor{Peters2009}, \citeyear{Peters2009}); the Infant Behavioral Assessment and Intervention Program (IBAIP; \citeauthor{VanHus2016}, \citeyear{VanHus2016}); the Victorian Infant Brain Studies (VIBeS PLus; \citeauthor{Spittle2018}, \citeyear{Spittle2018}); or using Kangaroo Mother Care position and method \citep{Peters2009}. A meta-analysis of these family-centred interventions has shown that they have a positive effect on cognition in children born very preterm, accompanied by a positive but weaker impact on motor abilities, and inconclusive results on language \citep{Ferreira2020}. Importantly, although these interventions have been beneficial, the exact environmental factors responsible for enhancing brain development remain largely unknown. 
 
 Socio-emotional and executive function skills are still in plain development during childhood and adolescence, suggesting that this age may still be within the intervention window. There has been growing evidence that children's capacity to understand emotions affects their social adjustment. Those who are more sensitive to emotional cues tend to have better relationships with friends and adults, are less likely to present behavioural problems, are more inclined to solve conflicts, and tend to perform better at school \citep{Denham2006,Domitrovich2007, Harrington2020}. Socio-emotional training has been shown to reduce aggressive behaviour and to improve both emotion recognition and executive functions in typically developing children and children from disadvantaged families, providing further evidence for the link between different cognitive abilities \citep{Pons2002,Sprung2015, Grazzani2018, DeMooij2020}. In recent years, mindfulness meditation training has emerged as a potential tool to help young populations manage a wide variety of symptoms including disruptive behaviour \citep{Perry-Parrish2016}. A study involving typically developing children at 11 years old showed that 8 weeks of mindfulness training already has the potential to improve attentional self-regulation \citep{Felver2017}. Another, found that meditation programs can enhance cognitive and social-emotional development in young populations \citep{Schonert-Reichl2015}. Taken together, these results further suggest a link between these cognitive domains and that mindfulness meditation may be an avenue for intervention in clinical populations. In fact, several studies have investigated the benefits of a meditation-based intervention for children with attention deficit hyperactivity disorder, but their varying methodological quality means that so far no clinical recommendation can be made and further, well-designed analyses, must be performed \citep{Evans2018}.
 
