--- a/main/ch3_BOLDvar.tex
+++ b/main/ch3_BOLDvar.tex
@@ -1,9 +1,9 @@
 \chapter{BOLD signal variability and dynamic spontaneous brain function in the preterm-born}\label{chapter:ch3}
 
 \vspace{2cm}
-Methods for brain imaging analyses often rely on measuring and comparing the activity in certain areas of interest after averaging across the duration of the experiment. This means that any information about variations in the signal is completely ignored. Recently, however, the blood oxygenation level dependent (BOLD) signal's variability has been shown to yield important information on brain function that is linked to cognitive abilities \citep{Garrett2013b}. It is thought to reflect the brain's flexibility and ability to rearrange itself in different ways to allow increased complexity and cognitive range \citep{Deco2011}.
+Methods for brain imaging analyses often rely on measuring and comparing the activity in certain areas of interest after averaging across the duration of the experiment. This means that any information about variations in the signal is completely ignored. Recently, however, the blood oxygenation level dependent (BOLD) signal's variability has been shown to yield important information on brain function that is linked to cognitive abilities \citep{Garrett2013b}. It is thought to reflect the brain's flexibility and ability to rearrange itself in different ways to allow increased complexity and cognitive range \citep{Deco2011, McIntosh2010}. It is thus a simple, but potentially valuable measure to investigate brain dynamics in clinical populations.
 
-To the best of my knowledge, at the time of this publication no one has investigated BOLD signal variability in preterm-born populations. In this chapter, I look into the dynamic aspects of brain function in two ways: first, in terms of voxelwise BOLD signal variability and its relationship with gestational age, age at assessment, and an interaction between the two. Secondly, I perform a seed-based co-activation pattern analysis focusing on the dorsal anterior cingulate cortex, an area previously shown to be affected by preterm birth that was also highlighted in the analysis of BOLD variability. 
+To the best of my knowledge, at the time of this publication no one has investigated BOLD signal variability in preterm-born populations. In this chapter, I look into the dynamic aspects of brain function in two ways: first, in terms of voxelwise BOLD signal variability and its relationship with gestational age, age at assessment, and an interaction between the two. Secondly,I perform a seed-based co-activation pattern (CAP) analysis focusing on the dorsal anterior cingulate cortex, an area previously found to be affected in studies involving preterm-born individuals \citep{White2014,Daamen2015,Lordier2019} and which was also highlighted in the analysis of BOLD variability. Through these two analyses I thus start from a global measure of brain dynamics, namely BOLD variability, and follow up with a dynamic analysis of functional brain states. This provides a broad overview of the dynamic aspects of spontaneous brain function in preterm-born young adolescents.
 
 
 
