--- a/main/ch4_ORFi.tex
+++ b/main/ch4_ORFi.tex
@@ -3,10 +3,10 @@
 
 \vspace{2cm}
 
-Task-based functional magnetic resonance imaging (fMRI) paradigms are essential to probe into brain activation driven by specific demands. As described in more detail in this chapter, the prefrontal cortex --- specifically the orbitofrontal cortex (OFC) --- has been shown to be essential for the ability to process reality filtering tasks in adults \citep{Schnider2018}. This region is, however, known to be underdeveloped in preterm-born individuals \citep{Thompson2007}. The goal of this chapter is thus twofold: to investigate whether, as in adults, the OFC mediates reality filtering in young adolescents; and whether preterm-born young adolescents use the same brain resources as fullterm-born controls to perform a reality filtering task.  
+While resting-state studies provide insightful information on spontaneous brain function, task-based functional magnetic resonance imaging (fMRI) paradigms are essential to probe into brain activation driven by specific demands. As described in more detail in this chapter, the prefrontal cortex --- specifically the orbitofrontal cortex (OFC) --- has been shown to be essential for the ability to process reality filtering tasks in adults \citep{Schnider2018}. This region is, however, known to be underdeveloped in preterm-born individuals \citep{Thompson2007}. The goal of this chapter is thus twofold: to investigate whether, as in adults, the OFC mediates reality filtering in young adolescents; and whether preterm-born young adolescents use the same brain resources as fullterm-born controls to perform a reality filtering task.  
 
 
-The first article included in this section has been published in the peer-reviewed Brain and Behaviour journal. Its goal was to test the hypothesis that the OFC mediates reality filtering processing in young adolescents. Maria Chiara Liverani and Lorena Freitas are considered joint first-authors for the paper, having performed the behavioural and neuroimaging analyses, respectively. In addition, Liverani and Freitas both participated in data collection for this study. The remaining authors participated in different stages of ideation for the overarching project (Building the Path to Resilience in Preterm Infants) and provided funding. 
+The first article included in this section has been published in the peer-reviewed Brain and Behaviour journal. Its goal was to test the hypothesis that the OFC mediates reality filtering processing in young adolescents. Maria Chiara Liverani and Lorena Freitas are considered joint first-authors for the paper, having performed the behavioural and neuroimaging analyses, respectively. In addition, Liverani and Freitas both participated in data collection for this study. The remaining authors participated in different stages of ideation for the overarching project (\textit{Building the Path to Resilience in Preterm Infants}) and/or provided funding. 
 
 The second article is a preprint of the followup study looking into reality filtering in preterm-born children as compared to the control group from the first study. 
 
