--- a/main/ch5_PPI_CAPs.tex
+++ b/main/ch5_PPI_CAPs.tex
@@ -1,6 +1,9 @@
 \chapter{Time-resolved brain dynamics during task performance} \label{chapter:ch5}
 %Here you can see a citation: \cite{atc13}.
-\add{Add little intro here about task-based dynamics}
+
+Dynamic approaches to analyse resting-state data have blossomed in recent years \citep{Chang2010,Preti2017}, but task-related paradigms to study cognition are yet to fully benefit from these methods. Most analyses available to date are based on sliding-window procedures \citep{Kucyi2014,Di2015,Gonzalez-Castillo2018}, thus relying on averaging over relatively long intervals of data. As a consequence, these methods do not fully explore the dynamic range that fMRI is able to unveil, which is down to sub-second scale. Point process analysis \citep{Tagliazucchi2012,Liu2013} select subsets of single fMRI frames when a seed is highly active and, when those are clustered, reoccurring patterns are unveiled containing all regions that co-activate with that region of interest. This allows brain function to be linked to specific moments of the experiment at frame resolution. 
+
+With the above in mind, in this chapter I introduce a method to examine moment-to-moment changes in brain connectivity during performance of a task, which has been published in the peer-reviewed journal NeuroImage \citep{Freitas2020}. I illustrate that this analysis captures information on brain function which is impossible to obtain using conventional static approaches. Given its ability to concentrate the analysis on limited amounts of data, this represents a promising avenue for the study of the dynamic features of task-modulated brain function in clinical or young populations. Therefore, on a second study, I apply this method to a data set in which preterm-born young adolescents and age-matched controls perform a task which involves movie watching and emotion regulation. We thus argue that explicitly examining changes in connectivity patterns is paramount to advance our understanding of how different brain areas dynamically communicate when presented with a set of cues, and of what abnormalities may arise in this interplay as a consequence of clinical conditions such as preterm birth. 
 
 \section{Journal Article: Time-resolved effective connectivity in task fMRI: psychophysiological interactions of co-activation patterns (PPI-CAPs)} \label{section:ppicaps_method}
 
@@ -280,7 +283,7 @@ This research was supported by the Swiss National Science Foundation (SNF) [gran
 \section{Journal Article: Tracking moment-to-moment functional connectivity in preterm-born young adolescents during movie watching and emotion regulation}\label{section:ppicaps_preterm}
 
 \begin{center}
- \textit{(Preprint of article to submit to... )}\add{Check author list and where to submit}
+ \textit{(Preprint with preliminary results )}\add{Check author list and where to submit}
  
 Lorena G. A. Freitas\textsuperscript{a,b,c}, 
 %Thomas A. W. Bolton\textsuperscript{a,b},  
@@ -354,7 +357,7 @@ All data were preprocessed using SPM12 (Wellcome Department of Imaging Neuroscie
 
 In order to approximate BOLD signals as much as possible to actual brain data, one of the initial steps in PPI-CAPs analysis is to deconvolve the time series with the haemodynamic response function \citep{Freitas2020}. To this end, here we apply total activation (TA) deconvolution \citep{Karahanoglu2013}, a method based on sparse spatio-temporal priors to uncover the underlying activity-inducing signal of fMRI without relying on timing information.
 
-After Total Activation deconvolution, data were warped into MNI (Montreal Neurologic Institute) space via a study-specific DARTEL (Diffeomorphic Anatomical Registration using Exponentiated Lie algebra) template to be allow group level comparisons. This normalisation method has been shown to be robust to age differences in participants from the age of 7 \citep{ASHBURNER1998, Burgund2002} and is among the top ranked currently available deformation algorithms \citep{Klein2009}.  
+After Total Activation deconvolution, data were warped into MNI (Montreal Neurologic Institute) space via a study-specific DARTEL (Diffeomorphic Anatomical Registration Through Exponentiated Lie algebra) template to be allow group level comparisons. This normalisation method has been shown to be robust to age differences in participants from the age of 7 \citep{ASHBURNER1998, Burgund2002} and is among the top ranked currently available deformation algorithms \citep{Klein2009}.  
 
 
 \subsubsection{Head motion} 
@@ -436,24 +439,30 @@ PPI-CAPs 1, 3, and 6 show  a positive interaction between seed and task (PPI eff
 \subsection{Discussion}
 In this study we investigated dynamic functional connectivity in the context of a task involving movie watching and emotional regulation in a preterm-born population of young adolescents. We employed a state-of-the-art method to uncover several patterns of co-activation with an anterior cingulate cortex (ACC) seed and analyse their relationship with three main effects (namely seed; task; and group), as well as three interaction effects (namely seed versus task; group versus task; and group versus seed). We identified several patterns with a significant effect, many of which involved differences across the two groups, revealing dynamic aspects of brain function in the preterm population that had not been uncovered before. 
 
-Our exploration of ACC-based connectivity patterns revealed several reproducible PPI-CAPs, with six being the optimal number of repeatable patterns. Previous studies had shown a wide variety of possible brain states in connection with other brain regions such as the posterior cingulate cortex \citep{Liu2013a,Lin2017,Freitas2020}. The ACC, in turn, has often come up in BOLD variability studies, including some involving clinical populations \citep{Zoller2017,Zhang2020}, suggesting this brain region's high flexibility and that dynamic aspects of its function and connectivity may be implicated in the neurological mechanisms of clinical disorders. To the best of our knowledge, this is the first study to  have explored the dynamic connectivity range of the ACC.
+Our exploration of ACC-based connectivity patterns revealed several reproducible PPI-CAPs, with six being the optimal number of repeatable patterns. Previous studies had shown a wide variety of possible brain states in connection with other brain regions such as the posterior cingulate cortex \citep{Liu2013a,Lin2017,Freitas2020}. The ACC, in turn, has often come up in BOLD variability studies, including some involving clinical populations \citep{Zoller2017,Zhang2020}, suggesting this brain region's high flexibility and that dynamic aspects of its function and connectivity may be implicated in the neurological mechanisms of clinical disorders. While Chapter \ref{chapter:ch3} investigated o the best of our knowledge this is the first study to  have explored the task-related dynamic connectivity range of the ACC.
 
 
-Only one PPI-CAP had a pure group effect. This was PPI-CAP 1, with somatomotor (SMN) areas being more highly active, while the default mode network (DMN) was deactive, in preterm-born children throughout the experiment. In addition, the group versus polarity effect indicates that it appears more often when this group is performing the movie watching task (note the darker colours on the right side of the corresponding confusion matrix in Figure \ref{fig:acc_cm}). In typically developing individuals, motor stimulation is related to contralateral activation of the motor cortex. Furthermore, not only physical stimulation, but even just the act of watching someone else move, or of imagining oneself moving, already generates similar activation \citep{Butler2006}. Studies involving somatomotor stimulation in preterm-born infants, however, have often found bilateral (as opposed to only contralateral) activation of the motor cortex in response to unilateral stimulation \citep{Heep2009a,Arichi2010,Allievi2016}. Many of the the videos shown during Movie Watching blocks involve high movement such as sports scenes of families playing football. Taken together, the above facts may justify not only the occasional appearance of motor-related areas during this experiment, but also why it appears more for the preterm group. Further analyses based on transients \citep{Karahanoglu2015a,Freitas2020} would help to disentangle the spatiotemporal overlapping of the different regions included in the PPI-CAP in this case.
+Only one PPI-CAP had a pure group effect close to significance. This was PPI-CAP 1, with somatomotor (SMN) areas being more highly active, while the default mode network (DMN) was deactive, in preterm-born children throughout the experiment. In addition, the group versus polarity effect indicates that it appears more often when this group is performing the movie watching task (note the darker colours on the right side of the corresponding confusion matrix in Figure \ref{fig:acc_cm}). In typically developing individuals, motor stimulation is related to contralateral activation of the motor cortex. Furthermore, not only physical stimulation, but even just the act of watching someone else move, or of imagining oneself moving, already generates similar activation \citep{Butler2006}. Studies involving somatomotor stimulation in preterm-born infants, however, have often found bilateral (as opposed to only contralateral) activation of the motor cortex in response to unilateral stimulation \citep{Heep2009a,Arichi2010,Allievi2016}. Many of the the videos shown during Movie Watching blocks involve high movement such as sports scenes of families playing football. Taken together, the above facts may justify not only the occasional appearance of motor-related areas during this experiment, but also why it appears more for the preterm group. Further analyses based on transients \citep{Karahanoglu2015a,Freitas2020} would help to disentangle the spatiotemporal overlapping of the different regions included in the PPI-CAP in this case.
 
-Interestingly, PPI-CAP 6, which includes the limbic network (LN) and the dorsal attention network (DAN) with opposite signs, shows both a group versus task and a group versus seed interaction effects. In controls, the LN is more often active when movie watching than during emotional regulation, while the opposite is true for the preterm group. It is also more deactivated (and the DAN activated) when the preterm are movie watching. \add{Ask Dimitri, Chiara and Vanessa's help to interpret this}
+Interestingly, PPI-CAP 6, which includes the limbic network (LN) and the dorsal attention network (DAN) with opposite signs, shows both a group versus task and a group versus seed interaction effects. In controls, the LN is more often active when movie watching than during emotional regulation, while the opposite is true for the preterm group. It is also more deactivated (and the DAN activated) when the preterm are movie watching. These results are in line with previous results which found altered structural connectivity of the cortico-basal-thalamo-cortical loop and the limbic system, which are essential for socio-emotional processing \citep{Olson2007,Braun2011}, in preterm-born school age children as compared to term-born controls \citep{Fischi-Gomez2015,Fischi-Gomez2016a}.
+
+Taken  together, the results presented here underline the potential of dynamic analyses to uncover brain function relationships that cannot be examined using traditional static methodologies. The potential to study these dynamic features in combination with behavioural and clinical outcomes proves a compelling direction for future research. 
+
+
+
+
 
 
 \subsection*{Considerations and future avenues}
 
 Although we identifies a variety of patterns that co-activate with the ACC, it is not possible to know whether all the brain regions contained in each pattern activated (or deactivated) simultaneously --- and it probably is not the case. Future studies would benefit from combining the PPI-CAPs approach with a method that extracts \textit{transients}, or moments of change, from the data, and only then performs the clustering step \citep{Karahanoglu2015a,Freitas2020}. This would help clarify the co-occurrence of certain networks with opposite signs in some of the PPI-CAPs we uncovered. 
 
-This study includes a task block where participants are asked to focus on their breathing. The very act of concentration one one's breathing has been shown to alter breathing patterns, which may cause changes not only in motion, but also CO\textsubscript{2} levels. A recent study by \citet{Chen2020} has shown that increased CO\textsubscript{2} levels induce vasodilation and an increase in blood flow, which may drive so-called "physiological networks". Thus, including physiological measures in a subsequent analysis would help control for these potential confounds when exploring task effects.
+This study includes a task block where participants are asked to focus on their breathing. The very act of concentration one one's breathing has been shown to alter breathing patterns \citep{Conrad2007}, which may cause changes not only in motion, but also CO\textsubscript{2} levels \citep{Western1988}. A recent study by \citet{Chen2020} has shown that increased CO\textsubscript{2} levels induce vasodilation and an increase in blood flow, which may drive so-called "physiological networks". Thus, including physiological measures in a subsequent analysis would help control for these potential confounds when exploring task effects.
 
 
 Another compelling next step would be to explore potential relationships between the occurrence of patterns identified here with behavioural and clinical measures from the participants. For example, does the occurrence of PPI-CAP 6, which has a strong emotional component, correlate with scores of emotional aptitude in these young adolescents? Future studies will help clarify this point.
 
-Finally, recent studies have looked into another aspect of brain dynamics called quasi-periodic patterns (QPP)\citep{Majeed2011}. This approach assumes that brain activity and BOLD fluctuations are dominated by a slow propagation of activity involving the DMN task positive networks \citep{Abbas2019}. The QPPs can then be tested on their spatiotemporal pattern, frequency and strength, which is useful to identify whether not only the existence of different patterns of activity per se, but also \textit{e.g.} the specific order in which they appear, brings novel information about clinical populations \citep{Briend2020}.
+Finally, recent studies have looked into another aspect of brain dynamics called quasi-periodic patterns (QPP)\citep{Majeed2011}. This approach assumes that brain activity and BOLD fluctuations are dominated by a slow propagation of activity involving the DMN task positive networks \citep{Abbas2019}. The QPPs can then be tested on their spatiotemporal pattern, frequency and strength, which is useful to identify whether not only the existence of different patterns of activity \textit{per se}, but also \textit{e.g.} the specific order in which they appear, brings novel information about clinical populations \citep{Briend2020}.
 
 
 % Salience shows more during Movie Watching, makes sense as there's much more stimulation. 
