--- a/main/ch6_FuturePerspectives.tex
+++ b/main/ch6_FuturePerspectives.tex
@@ -14,7 +14,7 @@ This work explored the dynamic features of brain function in young adolescents a
 
 
 \textbf{Time-resolved task-driven modulations of brain connectivity:}
-We thus proceeded to investigate how brain organisation changes over time as a result of task performance in the preterm population. Given their higher risk of attentional and socio-emotional deficits, we elaborated a task that includes a movie watching aspect and an emotion regulation one. To explore this rich data set we first developed a method to recover time-resolved co-activation patterns (PPI-CAPs) and analyse their relationships with the seed, task, or an interaction with the two. We initially validate this framework in an adult data set. Once the methodology was stable, we applied it on he preterm data and extended the method to allow group comparisons. Here, we identified a series of dorsal anterior cingulate cortex (ACC)-based co-activation patterns that vary differently in preterms and controls according to the task. Interestingly, a new pattern including the limbic network emerged from this data which had not been found in the CAP analysis from Chapter \ref{chapter:ch3}, which was based on resting-state data. This is in line with existing evidence that the limbic network is involved in emotion processing. Together, these results highlight the relevance of studying brain dynamics in clinical populations. 
+We thus proceeded to investigate how brain organisation changes over time as a result of task performance in the preterm population. Given their higher risk of attentional and socio-emotional deficits, we elaborated a task that includes a movie watching aspect and an emotion regulation one. To explore this rich data set we first developed a method to recover time-resolved co-activation patterns (PPI-CAPs) and analyse their relationships with the seed, task, or an interaction with the two. We initially validate this framework in an adult data set. Once the methodology was stable, we applied it on he preterm data and extended the method to allow group comparisons. Here, we identified a series of dorsal anterior cingulate cortex (ACC)-based co-activation patterns that vary differently in preterms and controls according to the task. Interestingly, a new pattern including the limbic network emerged from this data which had not been found in the CAP analysis from Chapter \ref{chapter:ch3}, which was based on resting-state data. This is in line with existing evidence that the limbic network is involved in emotion processing. Together, these results highlight the relevance of studying brain dynamics in clinical populations. The code developed to perform the analysis described in this work has been made available on \url{https://github.com/lorenafreitas/PPI_CAPs}
 
 
 
