--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -22,7 +22,7 @@
 \input{head/titlepage.tex}
 \include{head/dedication}
 \setcounter{page}{0}
-%\include{head/acknowledgements}
+\include{head/acknowledgements}
 %\include{head/preface}
 \include{head/abstracts}
 
