--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -545,6 +545,19 @@ url = {http://www.mitpressjournals.org/doi/10.1162/jocn{\_}a{\_}00686},
 volume = {27},
 year = {2015}
 }
+@article{Braun2011,
+author = {Braun, Katharina},
+doi = {10.1016/j.clp.2011.08.013},
+issn = {00955108},
+journal = {Clinics in Perinatology},
+month = {dec},
+number = {4},
+pages = {685--702},
+title = {{The Prefrontal-Limbic System: Development, Neuroanatomy, Function, and Implications for Socioemotional Development}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0095510811001072},
+volume = {38},
+year = {2011}
+}
 
 @article{Braun2015,
 archivePrefix = {arXiv},
@@ -960,6 +973,20 @@ title = {{Task activations produce spurious but systematic in fl ation of task f
 url = {https://doi.org/10.1016/j.neuroimage.2018.12.054},
 volume = {189},
 year = {2019}
+}
+
+@article{Conrad2007,
+author = {Conrad, Ansgar and M{\"{u}}ller, Anett and Doberenz, Sigrun and Kim, Sunyoung and Meuret, Alicia E. and Wollburg, Eileen and Roth, Walton T.},
+doi = {10.1007/s10484-007-9034-x},
+issn = {1090-0586},
+journal = {Applied Psychophysiology and Biofeedback},
+month = {jun},
+number = {2},
+pages = {89--98},
+title = {{Psychophysiological Effects of Breathing Instructions for Stress Management}},
+url = {http://link.springer.com/10.1007/s10484-007-9034-x},
+volume = {32},
+year = {2007}
 }
 
 @article{Costa2017,
@@ -1469,6 +1496,18 @@ volume = {25},
 year = {2015}
 }
 
+
+@article{Fischi-Gomez2016a,
+author = {Fischi-Gomez, Elda and Mu{\~{n}}oz-Moreno, Emma and Vasung, Lana and Griffa, Alessandra and Borradori-Tolsa, Cristina and Monnier, Maryline and Lazeyras, Fran{\c{c}}ois and Thiran, Jean-Philippe and H{\"{u}}ppi, Petra S.},
+doi = {10.1016/j.nicl.2016.02.001},
+issn = {22131582},
+journal = {NeuroImage: Clinical},
+pages = {195--209},
+title = {{Brain network characterization of high-risk preterm-born school-age children}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S2213158216300237},
+volume = {11},
+year = {2016}
+}
 
 @article{Fong2019,
 author = {Fong, Angus Ho Ching and Yoo, Kwangsun and Rosenberg, Monica D. and Zhang, Sheng and Li, Chiang-Shan R. and Scheinost, Dustin and Constable, R. Todd and Chun, Marvin M.},
@@ -3772,6 +3811,20 @@ volume = {167},
 year = {2018}
 }
 
+@article{Olson2007,
+author = {Olson, I. R. and Plotzker, A. and Ezzyat, Y.},
+doi = {10.1093/brain/awm052},
+issn = {0006-8950},
+journal = {Brain},
+month = {may},
+number = {7},
+pages = {1718--1731},
+title = {{The Enigmatic temporal pole: a review of findings on social and emotional processing}},
+url = {https://academic.oup.com/brain/article-lookup/doi/10.1093/brain/awm052},
+volume = {130},
+year = {2007}
+}
+
 
 @article{Padilla2015,
 author = {Padilla, Nelly and Alexandrou, Georgios and Blennow, Mats and Lagercrantz, Hugo and {\AA}d{\'{e}}n, Ulrika},
@@ -5132,6 +5185,20 @@ title = {{Is Granger Causality a Viable Technique for Analyzing fMRI Data?}},
 url = {http://journals.plos.org/plosone/article/file?id=10.1371/journal.pone.0067428{\&}type=printable},
 volume = {8},
 year = {2013}
+}
+
+@article{Western1988,
+author = {Western, P.J. and Patrick, J.M.},
+doi = {10.1016/0034-5687(88)90084-9},
+issn = {00345687},
+journal = {Respiration Physiology},
+month = {apr},
+number = {1},
+pages = {123--130},
+title = {{Effects of focusing attention on breathing with and without apparatus on the face}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/0034568788900849},
+volume = {72},
+year = {1988}
 }
 
 
